[package]
name = "position-manager-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
thiserror = "1"
solana-client = "1.17"
solana-sdk = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"
anchor-client = "0.29"
 futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.7"
serde_with = "3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
